vega_add_library(isotropicHyperelasticFEM
  SOURCES
    isotropicMaterial.cpp
    MooneyRivlinIsotropicMaterial.cpp
    neoHookeanIsotropicMaterial.cpp
    StVKIsotropicMaterial.cpp
    homogeneousMooneyRivlinIsotropicMaterial.cpp
    homogeneousStVKIsotropicMaterial.cpp
    homogeneousNeoHookeanIsotropicMaterial.cpp
    isotropicHyperelasticFEM.cpp
    isotropicHyperelasticFEMMT.cpp
    isotropicMaterialWithCompressionResistance.cpp
  PUBLIC_HEADERS
    MooneyRivlinIsotropicMaterial.h
    StVKIsotropicMaterial.h
    homogeneousMooneyRivlinIsotropicMaterial.h
    homogeneousNeoHookeanIsotropicMaterial.h
    homogeneousStVKIsotropicMaterial.h
    isotropicHyperelasticFEM.h
    isotropicHyperelasticFEMMT.h
    isotropicMaterial.h
    isotropicMaterialWithCompressionResistance.h
    neoHookeanIsotropicMaterial.h
)
target_link_libraries(isotropicHyperelasticFEM
  PUBLIC
    minivector
    volumetricMesh
    sparseMatrix
)
