vega_add_library(reducedStvk
  SOURCES
    StVKReducedInternalForces.cpp
    StVKReducedInternalForcesMT.cpp
    StVKReducedStiffnessMatrix.cpp
    StVKReducedHessianTensor.cpp
  PUBLIC_HEADERS
    StVKReducedHessianTensor.h
    StVKReducedInternalForces.h
    StVKReducedInternalForcesMT.h
    StVKReducedStiffnessMatrix.h
)
target_link_libraries(reducedStvk
  PUBLIC
    stvk
    modalMatrix
    matrix
)
