vega_add_library(rigidBodyDynamics
  SOURCES
    rigidBody.cpp
    rigidBody_generalTensor.cpp
)
target_include_directories(rigidBodyDynamics
  PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
  PUBLIC
    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
    $<INSTALL_INTERFACE:include>
)
target_link_libraries(rigidBodyDynamics
  PUBLIC
    quaternion
)
