vega_add_library(sparseSolver
  SOURCES
    #ARPACKSolver.cpp
    linearSolver.cpp
    PardisoSolver.cpp
    SPOOLESSolver.cpp
    SPOOLESSolverMT.cpp
    CGSolver.cpp
    invMKSolver.cpp
  PUBLIC_HEADERS
    #ARPACKSolver.h
    CGSolver.h
    PardisoSolver.h
    SPOOLESSolver.h
    SPOOLESSolverMT.h
    invMKSolver.h
    linearSolver.h
    sparseSolverAvailability.h
    sparseSolvers.h
)
target_link_libraries(sparseSolver
  PUBLIC
    sparseMatrix
)
