vega_add_library(stvk
  SOURCES
    StVKCubeABCD.cpp
    StVKElementABCD.cpp
    StVKElementABCDLoader.cpp
    StVKHessianTensor.cpp
    StVKInternalForces.cpp
    StVKInternalForcesMT.cpp
    StVKStiffnessMatrix.cpp
    StVKStiffnessMatrixMT.cpp
    StVKTetABCD.cpp
    StVKTetHighMemoryABCD.cpp
  PUBLIC_HEADERS
    StVKCubeABCD.h
    StVKElementABCD.h
    StVKElementABCDLoader.h
    StVKHessianTensor.h
    StVKInternalForces.h
    StVKInternalForcesMT.h
    StVKStiffnessMatrix.h
    StVKStiffnessMatrixMT.h
    StVKTetABCD.h
    StVKTetHighMemoryABCD.h
)
target_link_libraries(stvk
  PUBLIC
    minivector
    volumetricMesh
    sparseMatrix
)
