vega_add_library(volumetricMesh
  SOURCES
    volumetricMeshParser.cpp
    generateInterpolationMatrix.cpp
    generateMassMatrix.cpp
    generateSurfaceMesh.cpp
    generateMeshGraph.cpp
    computeStiffnessMatrixNullspace.cpp
    cubicMesh.cpp
    tetMesh.cpp
    volumetricMeshLoader.cpp
    volumetricMesh.cpp
    volumetricMeshENuMaterial.cpp
    volumetricMeshMooneyRivlinMaterial.cpp
    volumetricMeshExtensions.cpp
  PUBLIC_HEADERS
    computeStiffnessMatrixNullspace.h
    cubicMesh.h
    generateInterpolationMatrix.h
    generateMassMatrix.h
    generateMeshGraph.h
    generateSurfaceMesh.h
    tetMesh.h
    volumetricMesh.h
    volumetricMeshENuMaterial.h
    volumetricMeshExtensions.h
    volumetricMeshLoader.h
    volumetricMeshMooneyRivlinMaterial.h
    volumetricMeshParser.h
)
target_link_libraries(volumetricMesh
  PUBLIC
    sparseMatrix
    graph
    objMesh
    minivector
)
